1.优化编译参数，解决开屏后短暂白屏问题 2.制造数据中心，数量分布统计 按照料号排序

--- a/src/pages/home/mfgcountmodel.html
+++ b/src/pages/home/mfgcountmodel.html
@@ -25,20 +25,22 @@
                                         <div class="maingridstyle">
                                                 <ion-grid style="overflow:auto;color:#FFFFFF;" align-items-end *ngSwitchCase="group">
                                                         <ion-row align-items-end style="background-color:rgb(7,33,58);color:white;font-size:19px;">
-                                                            <ion-col text-left col-1>序号</ion-col>
+                                                            <!-- <ion-col text-left col-1>序号</ion-col> -->
                                                             <ion-col text-left col-1>订单日期</ion-col>
                                                             <ion-col text-left col-2>制造令号</ion-col>
-                                                            <ion-col text-left col-3>产品名称</ion-col>
+                                                            <ion-col text-left col-2>料号</ion-col>
+                                                            <ion-col text-left col-2>产品名称</ion-col>
                                                             <ion-col text-left col-1>接单数量</ion-col>
                                                             <ion-col text-left col-1>接单金额</ion-col>
                                                             <ion-col text-left col-1>接单产值</ion-col>
                                                             <ion-col text-left col-1>接单毛利率</ion-col>
                                                         </ion-row>
                                                         <ion-row style="font-size:19px;background-color:white;color:black;border-style: none none dotted none;border-width:1px;border-color: rgb(7,33,58);" *ngFor="let row of dataset[group].DetailDatas[deptname];index as n;">
-                                                            <ion-col text-left col-1>{{n+1}}</ion-col>
+                                                            <!-- <ion-col text-left col-1>{{n+1}}</ion-col> -->
                                                             <ion-col text-left col-1>{{row.BusinessDate}}</ion-col>
                                                             <ion-col text-left col-2>{{row.MFGCode}}</ion-col>
-                                                            <ion-col text-left col-3>{{row.ItemName}}</ion-col>
+                                                            <ion-col text-left col-2>{{row.ItemCode}}</ion-col>
+                                                            <ion-col text-left col-2>{{row.ItemName}}</ion-col>
                                                             <ion-col text-left col-1>{{row.OrderQty|thousands}}</ion-col>
                                                             <ion-col text-left col-1>{{row.SaleMoney|thousands}}</ion-col>
                                                             <ion-col text-left col-1>{{row.TransferMoney|thousands}}</ion-col>
