--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -79,7 +79,7 @@
                 <ion-grid style="overflow:auto;color:#FFFFFF;" align-items-end>
                     <ion-row style="font-size:25px;overflow:hide; height: 55px;border-width:1px;border-style: none none solid none;">
                       <ion-col></ion-col>
-                      <ion-col text-center align-self-center *ngFor="let header of ManufactureDatas.xAxis[0].data">{{header}}</ion-col>
+                      <ion-col text-center align-self-center *ngFor="let header of ManufactureDatas.xAxis[0].data" (click)="showGroupDetail(header)">{{header}}</ion-col>
                     </ion-row>
                     <ion-row style="overflow:hide; height: 60px;border-width:1px;border-style: none none solid none;" *ngFor="let rowdata of ManufactureDatas.series;index as i;">
                       <ion-col text-left style="font-size:21px;border-width:1px;border-style: none solid none solid;">{{rowdata.name}}</ion-col>
