修复税收总额计算问题

--- a/src/pages/tax/tax.html
+++ b/src/pages/tax/tax.html
@@ -29,7 +29,7 @@
 
   <ion-grid>
     <ion-row>
-      <ion-col>
+      <ion-col col-11>
         <ion-card class="maincontenttopstyle">
           <ion-card-content>
             <div echarts #taxPie [options]="taxPieData" class="piediv"></div>
