税务中心优化

--- a/src/pages/tax/tax.html
+++ b/src/pages/tax/tax.html
@@ -4,7 +4,7 @@
       <ion-icon style="font-size: 50px;" name="menu"></ion-icon>
     </button>
     <ion-title style="padding:0% 0% 0% 0%;">
-      <p align="center" style="color:white;font-size:58px;">永强集团税收信息中心</p>
+      <p align="center" style="color:white;font-size:58px;">永强集团税务信息中心</p>
     </ion-title>
     <ion-buttons end>
       <button ion-button>
