1. 税务中心重新排序 2. 样式调试

--- a/src/pages/tax/tax.html
+++ b/src/pages/tax/tax.html
@@ -18,13 +18,13 @@
 
 <ion-content padding>
   <ion-card class="segment-year">
-    <ion-toolbar no-border-top>
-      <ion-segment [(ngModel)]="choosedYear">
+    <!-- <ion-toolbar no-border-top> -->
+      <ion-segment  color="danger" [(ngModel)]="choosedYear">
         <ion-segment-button value="{{year}}" *ngFor="let year of Years;" (click)="chooseYear()">
           {{year}}
         </ion-segment-button>
       </ion-segment>
-    </ion-toolbar>
+    <!-- </ion-toolbar> -->
   </ion-card>
 
   <ion-grid>
