--- a/src/pages/tax/tax.html
+++ b/src/pages/tax/tax.html
@@ -1,32 +1,28 @@
 <ion-header>
   <ion-navbar color="defaultbgcolor" class="bar-positive" align-title="center" #navbar>
     <button ion-button menuToggle>
-      <ion-icon style="font-size: 50px;" name="menu"></ion-icon>
+      <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title style="padding:0% 0% 0% 0%;">
-      <p align="center" style="color:white;font-size:58px;">永强集团税务数据中心</p>
+    <ion-title>
+      <p align="right" class="title-title">永强集团税务数据中心</p>
+      <p align="center" class="title-select">
+        <ion-label>年度</ion-label>
+        <ion-select [(ngModel)]="choosedYear" (ionChange)="chooseYear($event)" interface="popover">
+          <ion-option value="{{year}}" *ngFor="let year of Years;">{{year}}</ion-option>
+        </ion-select>
+      </p>
     </ion-title>
+
     <ion-buttons end>
       <button ion-button>
-        <p align="center" style="color:white;font-size:25px;">单位(万元)&nbsp;&nbsp;</p>
-        <ion-input style="color:white;font-size:25px;" [(ngModel)]="timevalue" #clockcontrol></ion-input>
+        <p align="center">单位(万元)&nbsp;&nbsp;</p>
+        <ion-input [(ngModel)]="timevalue" #clockcontrol></ion-input>
       </button>
     </ion-buttons>
   </ion-navbar>
 </ion-header>
 
-
 <ion-content padding>
-  <ion-card class="segment-year">
-    <!-- <ion-toolbar no-border-top> -->
-    <ion-segment color="danger" [(ngModel)]="choosedYear">
-      <ion-segment-button value="{{year}}" *ngFor="let year of Years;" (click)="chooseYear()">
-        {{year}}
-      </ion-segment-button>
-    </ion-segment>
-    <!-- </ion-toolbar> -->
-  </ion-card>
-
   <ion-grid>
     <ion-row>
       <ion-col col-11>
@@ -39,14 +35,14 @@
         <ion-card class="maincontentstyle">
           <div echarts #taxBar [options]="taxBarData" class="bardiv"></div>
           <div class="profitgridstyle">
-            <ion-grid style="padding:0% 0% 0% 0%;overflow:hide;color:#FFFFFF;font-size:20px;" align-items-start>
-              <ion-row style="overflow:hide; height: 75px;border-width:1px;border-style: none none solid none;">
-                <ion-col style="overflow:auto;font-size:22px;"></ion-col>
-                <ion-col text-center style="overflow:auto;font-size:22px;" *ngFor="let header of taxBarxAxisAppend">{{header}}</ion-col>
+            <ion-grid align-items-start>
+              <ion-row class="profit-header">
+                <ion-col></ion-col>
+                <ion-col text-center *ngFor="let header of taxBarxAxisAppend">{{header}}</ion-col>
               </ion-row>
-              <ion-row style="overflow:hide; height: 60px;border-width:1px;border-style: none none solid none;" *ngFor="let rowdata of taxBarSeriesAppend;index as i;">
-                <ion-col text-left align-self-center style="font-size:24px;border-width:1px;border-style: none solid none solid;">{{rowdata.name}}</ion-col>
-                <ion-col text-right align-self-center style="font-size:24px;border-width:1px;border-style: none solid none solid;" *ngFor="let coldata of rowdata.data">{{coldata}}</ion-col>
+              <ion-row class="profit-content" *ngFor="let rowdata of taxBarSeriesAppend;index as i;">
+                <ion-col text-left align-self-center>{{rowdata.name}}</ion-col>
+                <ion-col text-right align-self-center *ngFor="let coldata of rowdata.data">{{coldata}}</ion-col>
               </ion-row>
             </ion-grid>
           </div>
