版本：1.1.15 更新内容：1. 库存数据中心增加月份选择组件

--- a/src/pages/inventory/inventory.html
+++ b/src/pages/inventory/inventory.html
@@ -6,10 +6,10 @@
     <ion-title>
       <p align="right" class="title-title">永强集团库存数据中心</p>
 
-      <!-- <p align="center" class="title-select" (click)="presentPopover($event)">
-        {{choosedYear}}年
+      <p align="center" class="title-select" (click)="presentPopover($event)">
+        {{currentYear}}年 {{choosedMonth}}月
         <ion-icon name="arrow-dropdown"></ion-icon>
-      </p> -->
+      </p>
     </ion-title>
 
     <ion-buttons end>
