版本：1.1.19 更新内容：1. 事件单独配置 2. 精简部分多余代码

--- a/src/pages/inventory/inventory.html
+++ b/src/pages/inventory/inventory.html
@@ -7,7 +7,7 @@
       <p align="right" class="title-title">永强集团库存数据中心</p>
 
       <p align="center" class="title-select" (click)="presentPopover($event)">
-        {{currentYear}}年 {{choosedMonth}}月
+        {{currentYear}}年 {{choosedMonth}}
         <ion-icon name="arrow-dropdown"></ion-icon>
       </p>
     </ion-title>
