--- a/src/pages/investstock/investstock.html
+++ b/src/pages/investstock/investstock.html
@@ -45,14 +45,20 @@
         <ion-card class="sheet-card">
           <ion-grid align-items-end>
             <ion-row class="sheet-row-header">
-              <ion-col text-center align-self-center *ngFor="let header of headers">{{header}}</ion-col>
+              <ion-col text-center align-self-center *ngFor="let header of headers" (click)="_orderBy(header.col)">
+                {{header.name}}
+                <ion-icon *ngIf="orderByCol == header.col && orderByFlow == 'desc' " name="arrow-round-down" [ngStyle]="{'font-size': '1.0em'}"></ion-icon>
+                <ion-icon *ngIf="orderByCol == header.col && orderByFlow == 'asc' " name="arrow-round-up" [ngStyle]="{'font-size': '1.0em'}"></ion-icon>
+              </ion-col>
             </ion-row>
 
             <!--TODO:这里scroll高度应该是动态计算的-->
             <ion-scroll scrollX="false" scrollY="true" style="height: 440px">
               <ion-row class="sheet-row-content" *ngFor="let rowdata of invesStockData;index as i;">
                 <ion-col text-center align-self-center style="border-style: none solid none solid;">
-                  <span style="font-size:23px;color:rgba(97, 177, 202, 0.9);">{{rowdata.StockName}}</span>
+                  <span style="font-size:23px;color:rgba(97, 177, 202, 0.9);">
+                    {{rowdata.StockName}}
+                  </span>
                 </ion-col>
                 <ion-col text-center align-self-center>{{rowdata.StockID}}</ion-col>
                 <ion-col text-center align-self-center>{{rowdata.StockValueInit}}</ion-col>
