--- a/src/pages/management/management.html
+++ b/src/pages/management/management.html
@@ -1,22 +1,113 @@
 <ion-header>
   <ion-navbar color="defaultbgcolor" class="bar-positive" align-title="center" #navbar>
     <button ion-button menuToggle>
-      <ion-icon style="font-size: 50px;" name="menu"></ion-icon>
+      <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title style="padding:0% 0% 0% 0%;">
-      <p align="center" style="color:white;font-size:58px;">永强集团经营数据中心</p>
+    <ion-title>
+      <p align="right" class="title-title">永强集团经营数据中心</p>
+      <p align="center" class="title-select" (click)="presentPopover($event)">
+        <!-- {{currentYear}}年 {{choosedMonth}}月 -->
+        {{choosedPeriod}}
+        <ion-icon name="arrow-dropdown"></ion-icon>
+      </p>
     </ion-title>
     <ion-buttons end>
       <button ion-button>
-        <!-- <p align="center" style="color:white;font-size:25px;">单位(万件)&nbsp;&nbsp;</p> -->
-        <ion-input style="color:white;font-size:25px;" [(ngModel)]="timevalue" #clockcontrol></ion-input>
+        <p align="center">单位(万元)&nbsp;&nbsp;</p>
+        <ion-input [(ngModel)]="timevalue" #clockcontrol></ion-input>
       </button>
     </ion-buttons>
   </ion-navbar>
 </ion-header>
 
-
-
 <ion-content padding>
+  <ion-grid>
+    <ion-row>
+      <!--左侧-->
+      <ion-col col-9>
+        <ion-row>
+          <!--累计显示-->
+          <ion-card class="top-card">
+            <ion-row>
+              <ion-col *ngFor="let item of totalData">
+                <ion-card>
+                  <ion-card-content>
+                    <ion-card-title align="center" [ngStyle]="{'color': item.fontcolor}">{{item.title}}</ion-card-title>
+                    <p align="center" [ngStyle]="{'color': item.fontcolor}">{{item.num}}</p>
+                  </ion-card-content>
+                </ion-card>
+              </ion-col>
+            </ion-row>
+          </ion-card>
+          <!--./累计显示-->
 
+          <!--经营业绩详情显示-->
+          <ion-card class="maincontentstyle">
+            <div echarts #midBar [options]="barData" class="bardiv"></div>
+            <div class="profitgridstyle">
+              <ion-grid align-items-start>
+                <ion-row class="profit-header">
+                  <ion-col></ion-col>
+                  <ion-col text-center *ngFor="let header of barData.xAxis[0].data" (click)="changeGroup(header)">{{header}}</ion-col>
+                </ion-row>
+                <ion-row class="profit-content" *ngFor="let rowdata of barData.series;index as i;">
+                  <ion-col text-left align-self-center>{{rowdata.name}}</ion-col>
+                  <ion-col text-center align-self-center *ngFor="let coldata of rowdata.data">
+                    {{coldata}}
+                    <span *ngIf="rowdata.name == '毛利率' ">%</span>
+                  </ion-col>
+                </ion-row>
+              </ion-grid>
+            </div>
+          </ion-card>
+          <!--./经营业绩详情显示-->
+        </ion-row>
+      </ion-col>
+      <!--./左侧-->
+
+      <!--右侧-->
+      <ion-col col-3>
+        <!--不同行业企业详情card-->
+        <ion-card class="right-cards">
+          <ion-card-header>
+            {{groupByIndustryData.industry}}
+          </ion-card-header>
+          <ion-scroll scrollX="false" scrollY="true" style="height: 1000px">
+            <ion-row>
+              <ion-col>
+                <ion-card class="right-cards-detail" *ngFor="let item of groupByIndustryData.data">
+                  <ion-row class="right-cards-detail-header">
+                    <ion-col text-center>{{item.company}}</ion-col>
+                  </ion-row>
+
+                  <ion-row class="right-cards-detail-content">
+                    <ion-col text-center>销售收入</ion-col>
+                    <ion-col text-center>{{item.revenue}}</ion-col>
+                  </ion-row>
+                  <ion-row class="right-cards-detail-content">
+                    <ion-col text-center>毛利额</ion-col>
+                    <ion-col text-center>{{item.gross_profit}}</ion-col>
+                  </ion-row>
+                  <ion-row class="right-cards-detail-content">
+                    <ion-col text-center>费用</ion-col>
+                    <ion-col text-center>{{item.three_fee}}</ion-col>
+                  </ion-row>
+                  <ion-row class="right-cards-detail-content">
+                    <ion-col text-center>净利润</ion-col>
+                    <ion-col text-center>{{item.net_profit}}</ion-col>
+                  </ion-row>
+                  <ion-row class="right-cards-detail-content">
+                    <ion-col text-center>毛利率</ion-col>
+                    <ion-col text-center>{{item.gross_rate}}%</ion-col>
+                  </ion-row>
+                </ion-card>
+              </ion-col>
+            </ion-row>
+          </ion-scroll>
+        </ion-card>
+        <!--./不同行业企业详情card-->
+      </ion-col>
+      <!--./右侧-->
+    </ion-row>
+  </ion-grid>
 </ion-content>
