--- a/src/pages/smreport/smreport.html
+++ b/src/pages/smreport/smreport.html
@@ -70,7 +70,8 @@
             <ion-grid style="padding:5% 15% 0% 0%;overflow:hide;color:#F6B19C;font-size:25px;text-overflow: hide;white-space: nowrap;"
               align-items-end>
               <ion-row style="height: 45px;border-width:1px;border-style: none none none none;">
-                <ion-col text-center style="border-width:1px;border-style: none none none none;color:#F6B19C;">接单毛利率前10名</ion-col>
+                <ion-col text-center style="border-width:1px;border-style: none none none none;color:#F6B19C;">接单毛利率后10名<span style="font-size: 14px;">（接单金额 > 1000万）</span>
+                </ion-col>
               </ion-row>
               <ion-row style="height: 40px;border-width:1px;border-style: dotted none dotted none;">
                 <ion-col col-6 text-center style="border-width:1px;border-style: none dotted none none;color:#F6B19C;">客户</ion-col>
