版本：1.2.11 更新内容： 1. 股票投资中心增加买入价

--- a/src/pages/investstock/investstock.html
+++ b/src/pages/investstock/investstock.html
@@ -63,6 +63,7 @@
                 <ion-col text-center align-self-center>{{rowdata.StockID}}</ion-col>
                 <ion-col text-center align-self-center>{{rowdata.StockValueInit}}</ion-col>
                 <ion-col text-right align-self-center>{{rowdata.StockNum}}&nbsp;股</ion-col>
+                <ion-col text-center align-self-center>{{rowdata.StockBuyVal}}</ion-col>
                 <ion-col text-center align-self-center>{{rowdata.ClosePrice}}</ion-col>
                 <ion-col text-center align-self-center>{{rowdata.StockValueCurrent}}</ion-col>
                 <ion-col text-center align-self-center>
