版本：1.3.0 更新内容： 1. 加入权限控制 2. 加入制造部返工数据中心

--- a/src/pages/inventory/inventory.html
+++ b/src/pages/inventory/inventory.html
@@ -37,12 +37,12 @@
           <div class="profitgridstyle">
             <ion-grid align-items-start>
               <ion-row class="profit-header">
-                <ion-col>存放地点</ion-col>
+                <ion-col text-center>存放地点</ion-col>
                 <ion-col text-center *ngFor="let header of inventoryBarxAxisAppend">{{header}}</ion-col>
               </ion-row>
               <ion-row class="profit-content" *ngFor="let rowdata of inventoryBarSeriesAppend;index as i;">
-                <ion-col text-left align-self-center>{{rowdata.name}}</ion-col>
-                <ion-col text-right align-self-center *ngFor="let coldata of rowdata.data">{{coldata}}</ion-col>
+                <ion-col text-center align-self-center>{{rowdata.name}}</ion-col>
+                <ion-col text-center align-self-center *ngFor="let coldata of rowdata.data">{{coldata}}</ion-col>
               </ion-row>
             </ion-grid>
           </div>
