--- a/src/pages/smreport/smreport.html
+++ b/src/pages/smreport/smreport.html
@@ -34,7 +34,7 @@
               </ion-row>
               <ion-row style="overflow:hide; height: 60px;border-width:1px;border-style: none none solid none;" *ngFor="let rowdata of profitdatas.series;index as i;">
                 <ion-col text-left align-self-center style="font-size:20px;border-width:1px;border-style: none solid none solid;">{{rowdata.name}}</ion-col>
-                <ion-col text-right align-self-center style="font-size:20px;border-width:1px;border-style: none solid none solid;" *ngFor="let coldata of rowdata.data">{{GetFormatValue(coldata,i)}}</ion-col>
+                <ion-col text-center align-self-center style="font-size:20px;border-width:1px;border-style: none solid none solid;" *ngFor="let coldata of rowdata.data">{{GetFormatValue(coldata,i)}}</ion-col>
               </ion-row>
             </ion-grid>
           </div>
