feature(tax): 税务中心时间选择调整为按照月份选择

--- a/src/pages/tax/tax.html
+++ b/src/pages/tax/tax.html
@@ -6,7 +6,8 @@
     <ion-title>
       <p align="right" class="title-title">永强集团税务数据中心</p>
       <p align="center" class="title-select" (click)="presentPopover($event)">
-        {{choosedYear}}
+        <!-- {{choosedYear}} -->
+        {{choosedPeriod}}
         <ion-icon name="arrow-dropdown"></ion-icon>
 
         <!-- <ion-select [(ngModel)]="choosedYear" (ionChange)="chooseYear($event)" interface="popover">
